# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ui.gni")
import("//components/nacl/features.gni")

assert(is_linux || is_tizen)
assert(enable_nacl)

source_set("sandbox_linux") {
  set_sources_assignment_filter([])
  sources = [
    "nacl_bpf_sandbox_linux.cc",
    "nacl_bpf_sandbox_linux.h",
    "nacl_sandbox_linux.cc",
  ]

  defines = [ "IN_NACL_HELPER=1" ]

  deps = [
    "//base",
    "//components/nacl/common",
    "//components/nacl/loader",
    "//content/public/common",
    "//crypto",
    "//ipc",
    "//sandbox",
    "//sandbox:sandbox_features",
    "//sandbox/linux:sandbox_services_headers",
  ]

  if (use_glib) {
    configs += [ "//build/config/linux:glib" ]
  }

  if (is_tizen) {
    deps -= [
      "//content/public/common",
    ]

    sources += [
      "../../../../content/common/common_sandbox_support_linux.cc",
      "../../../../content/common/sandbox_linux/sandbox_init_linux.cc",
      "../../../../content/common/sandbox_linux/sandbox_seccomp_bpf_linux.cc",
    ]
  }
}
